# drf_homework

./: .env  .env.sample  .gitignore  celerybeat-schedule.bak  manage.py  pyproject.toml
djangoProjectDRF_1_0/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
fixtures/: course.json  lesson.json  payment.json
ims/: admin.py  models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
ims/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_author_lesson_author.py  0004_alter_lesson_url.py  0005_alter_lesson_url_subscription.py  0006_subscription_subscription_is.py  0007_remove_subscription_subscription_is.py
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: autofield.py  csu.py  moders.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_payment_method.py  0004_payment_link.py  0005_alter_payment_payment_sum.py  0006_alter_payment_payment_date.py
