[tool.poetry]
name = "djangoprojectdrf-1-0"
version = "0.1.0"
description = ""
authors = ["ryfe <denis.koptelev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
black = "^24.4.2"
django-filter = "^24.2"
ipython = "^8.24.0"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.5.1"
drf-yasg = "^1.21.7"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
